--- a/styles.scss
+++ b/styles.scss
@@ -1,10 +1,24 @@
+header {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 2.25rem;
+  color: #464646;
+}
+
+h1, h2, h3, a, li, p {
+  font-family: "Avenir", sans-serif;
+}
+
 ul {
   list-style-type: none;
   margin: 0;
   padding: 4.5rem;
   display: inline;
+  position: fixed;
+  width: 100%;
 }
 
 li {
-  float: left;
+  float: right;
 }
