--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,6 @@ h1, h2, h3, a, li, p {
 }
 
 ul {
-  font-size: 1.5rem;
   list-style-type: none;
   padding: 4.5rem;
   display: inline;
@@ -22,6 +21,14 @@ ul {
 li {
   float: right;
 }
+
+li a {
+  display: block;
+  color: #464646;
+  font-size: 1.5rem;
+
+}
+
 
 nav {
   margin-top: 1.5rem;
