--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,5 @@
 header {
   font-family: "Poppins", sans-serif;
-  font-style: normal;
-  font-weight: normal;
   font-size: 2.25rem;
   color: #464646;
   margin-left: 3rem;
@@ -13,7 +11,6 @@ h1, h2, h3, a, li, p {
 
 ul {
   list-style-type: none;
-  padding: 4.5rem;
   display: inline;
   position: fixed;
 }
@@ -24,6 +21,7 @@ li {
 
 li a {
   display: block;
+  padding-left: 4.5rem;
   color: #464646;
   font-size: 1.5rem;
 }
